Corrected image paths

--- a/2016-02-22-How-to-use-Moq-with-.NET-Core-Apps/index.html
+++ b/2016-02-22-How-to-use-Moq-with-.NET-Core-Apps/index.html
@@ -118,7 +118,7 @@
     
 <nav id="article-nav">
   
-    <a href="/2016-02-25-Pay-151-SEK---Get-2400-SEK-Back-as-Azure-Credits-(Microsoft-Developer-Program-Benefit)/" id="article-nav-newer" class="article-nav-link-wrap">
+    <a href="/2016-02-25-Pay-151-SEK-Get-2400-SEK-Back-as-Azure-Credits/" id="article-nav-newer" class="article-nav-link-wrap">
       <strong class="article-nav-caption">Newer</strong>
       <div class="article-nav-title">
         
