--- a/2016-03-14-Database-Migration-with-DbUp-and-VSTS/index.html
+++ b/2016-03-14-Database-Migration-with-DbUp-and-VSTS/index.html
@@ -124,7 +124,7 @@
     </a>
   
   
-    <a href="/2016-02-25-Pay-151-SEK---Get-2400-SEK-Back-as-Azure-Credits-(Microsoft-Developer-Program-Benefit)/" id="article-nav-older" class="article-nav-link-wrap">
+    <a href="/2016-02-25-Pay-151-SEK-Get-2400-SEK-Back-as-Azure-Credits/" id="article-nav-older" class="article-nav-link-wrap">
       <strong class="article-nav-caption">Older</strong>
       <div class="article-nav-title">Pay 151 SEK - Get 2400 SEK Back as Azure Credits (Microsoft Developer Program Benefit)</div>
     </a>
